Remove overflow style to resolve bug, update transaction preview modal copy (#165)

--- a/pkg/web/static/styles/style.css
+++ b/pkg/web/static/styles/style.css
@@ -76,11 +76,3 @@ body main {
 .htmx-request.htmx-indicator{
   display: inline;
 }
-
-/* Set a media query for the transaction list table */
-@media (max-width: 1536px) {
-  .table-container {
-    overflow-x: auto;
-    overflow-y: hidden;
-  }
-}
